upgrade image css html

--- a/blog-single-2.html
+++ b/blog-single-2.html
@@ -30,14 +30,14 @@
     
             <div class="collapse navbar-collapse text-center" id="navigation">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="portfolio.html">Portfolio</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="blog.html">Blog</a>
+                    <li class="nav-item active">
+                        <a class="nav-link active" href="blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="https://www.github.com/hangocmy" target="_blank" ><i class="ti-github"></i></a>
@@ -51,11 +51,9 @@
       <div class="container">
         <div class="row">
           <div class="col-12 text-center">
-            <h1 class="text-body font-tertiary">Blogs</h1>
           </div>
         </div>
       </div>
-      <img src="images/illustrations/page-title.png" alt="illustrations" class="bg-shape-1 w-100">
       <img src="images/illustrations/leaf-pink-round.png" alt="illustrations" class="bg-shape-2">
       <img src="images/illustrations/dots-cyan.png" alt="illustrations" class="bg-shape-3">
       <img src="images/illustrations/leaf-orange.png" alt="illustrations" class="bg-shape-4">
