change color primary

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body>
         <header class="navigation fixed-top">
             <nav class="navbar navbar-expand-lg navbar-dark">
-                <a class="navbar-brand font-tertiary h3" href="index.html" style="font-style: italic; text-shadow: 2px 2px #4a7d40; font-size: 1.3rem; font-weight: lighter;">
+                <a class="navbar-brand font-tertiary h3" href="index.html" style="font-style: bold; font-size: 1.3rem; font-weight: lighter;">
                     hangocmy
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
@@ -49,7 +49,7 @@
         <div class="container">
             <div class="row">
             <div class="col-lg-12 mx-auto">
-                <h2 class="text-body font-tertiary"> Hi! I'm<br>Ha Ngoc My
+                <h2 class="text-body font-tertiary" style="color: white!important;"> Hi!<br>Nice to see you</h2>
             </div>
             </div>
         </div>
@@ -63,34 +63,20 @@
         <div class="container">
             <div class="row">
             <div class="col-md-8">
-                <blockquote style="
-                    font-size: 0.8rem;
-                    line-height: 0.7rem;
-                    font-weight: 500;
-                    color: white;
-                    background-color: #5f9d51">
+                <blockquote class="blockquote-content">
                     - Never stop creating new ideas -
                 </blockquote>
-                <p>I'm a Bachelor of Software Engineering.
-                I'm currently learning everything about:
-                <br>📑 Web design, Web front-end.
-                <br>📑 Software Testing: manual & automation testing:
-                <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp🔖 Test automation framework: Cypress, Playwright, Selenium,...
-                <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp🔖 API testing tool: Postman,...
-                <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp🔖 Performance Testing: JMeter, etc...
-                <br>
-                <br>As a result of my love towards web application, I began setting up this website.
-                In the future, I will learn more technologies.
+                <p>My undergraduate degree is in software engineering. I'm actively working and learning everything there is to know about web front-end, CI/CD and software testing in general (manual, automated, performance testing)
+                    <br>&nbsp&nbsp&nbsp🔖 Test automation framework: Cypress, Playwright, Selenium,...
+                    <br>&nbsp&nbsp&nbsp🔖 API testing tool: Postman,...
+                    <br>&nbsp&nbsp&nbsp🔖 Performance Testing: JMeter, etc...
                 </p>
                 <p>
-                During my projects, I worked as a Team leader as well as a Team player, and by doing so,
-                I ensured the proper completion of work by team members.
-                </p>
-                <p>
-                My goal is to build a successful career as a Automation Tester.
-                This is all about me.
-                </p>
-                
+                    My objective is to become a successful software automation engineer.
+                    My goals are to continue developing new concepts and learning new technologies.
+                </p>   
+                <p><i>/Mentor and believer in the potential of women to work in areas of technology/</i></p>
+
                 <blockquote style="font-size: 0.9rem; border-radius: 10px; font-weight: bold;">My favourite quote: "To be beautiful means to be yourself"</blockquote>
 
             </div>
@@ -154,7 +140,7 @@
                         <div class="wave" data-progress="80%"></div>
                     </div>
                     <div class="card-footer bg-white">
-                        <h5 class="card-title">Automation Testing</h5>
+                        <h5 class="card-title">Automated Testing</h5>
                     </div>
                     </div>
                 </div>
@@ -285,7 +271,7 @@
                         Software Test Engineer 
                         </h4>
                         <p class="mb-0 text-light">
-                        Automation & Manual Testing
+                        Automated & Manual Testing
                         </p>
                     </div>
                     </div>
@@ -353,7 +339,7 @@
             <div class="col-lg-3 col-md-4 text-center">
                 <img src="images/experience/icon-3.png" alt="icon">
                 <p class="mb-0">Sep 2020 - Present</p>
-                <h4>Software Testing: Manual & Automation Testing</h4>
+                <h4>Software Testing: Manual & Automated Testing</h4>
                 <h6 class="text-light"></h6>
             </div>
             </div>
