--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
 
     <header class="navigation fixed-top">
         <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand font-tertiary h3" href="index.html" style="font-style: italic; text-shadow: 2px 2px #4a7d40; font-size: 1.3rem; font-weight: lighter;">
+            <a class="navbar-brand font-tertiary h3" href="index.html" style="font-style: bold; font-size: 1.3rem; font-weight: lighter;">
                 hangocmy
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
@@ -62,25 +62,25 @@
 
     <section class="section">
         <div class="container">
-            <div class="row mb-4">
+            <div class="row mb-4 filter-bar">
             <div class="col-3"></div>
             <div class="col-6">
-                <div class="btn-group btn-group-toggle justify-content-center d-flex" data-toggle="buttons">
-                <label class="btn btn-sm btn-primary active" style="padding: 10px 20px; font-size: 12px">
-                    <input type="radio" name="shuffle-filter" value="all" checked="checked">All
-                </label>
-                <label class="btn btn-sm btn-primary" style="padding: 10px 20px; font-size: 12px">
-                    <input type="radio" name="shuffle-filter" value="ui-ux">UI/UX Design
-                </label>
-                <label class="btn btn-sm btn-primary" style="padding: 10px 20px; font-size: 12px">
-                    <input type="radio" name="shuffle-filter" value="web-app">Web App
-                </label>
-                <label class="btn btn-sm btn-primary" style="padding: 10px 20px; font-size: 12px">
-                    <input type="radio" name="shuffle-filter" value="automated-testing">Automated Testing
-                </label>
-                <label class="btn btn-sm btn-primary" style="padding: 10px 20px; font-size: 12px">
-                    <input type="radio" name="shuffle-filter" value="ci-cd">CI/CD
-                </label>
+                <div class="btn-group btn-group-toggle justify-content-center d-flex filter-bar-item" data-toggle="buttons">
+                    <label class="btn btn-sm btn-primary-filter active" style="padding: 10px 20px; font-size: 12px">
+                        <input type="radio" name="shuffle-filter" value="all" checked="checked">All
+                    </label>
+                    <label class="btn btn-sm btn-primary-filter" style="padding: 10px 20px; font-size: 12px">
+                        <input type="radio" name="shuffle-filter" value="ui-ux">UI/UX Design
+                    </label>
+                    <label class="btn btn-sm btn-primary-filter" style="padding: 10px 20px; font-size: 12px">
+                        <input type="radio" name="shuffle-filter" value="web-app">Web App
+                    </label>
+                    <label class="btn btn-sm btn-primary-filter" style="padding: 10px 20px; font-size: 12px">
+                        <input type="radio" name="shuffle-filter" value="automated-testing">Automated Testing
+                    </label>
+                    <label class="btn btn-sm btn-primary-filter" style="padding: 10px 20px; font-size: 12px">
+                        <input type="radio" name="shuffle-filter" value="ci-cd">CI/CD
+                    </label>
                 </div>
             </div>
             <div class="col-3"></div>
