--- a/blog-single.html
+++ b/blog-single.html
@@ -21,7 +21,7 @@
 
         <header class="navigation fixed-top">
             <nav class="navbar navbar-expand-lg navbar-dark">
-                <a class="navbar-brand font-tertiary h3" href="index.html" style="font-style: italic; text-shadow: 2px 2px #4a7d40; font-size: 1.3rem; font-weight: lighter;">
+                <a class="navbar-brand font-tertiary h3" href="index.html" style="font-style: bold; font-size: 1.3rem; font-weight: lighter;">
                     hangocmy
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
