--- a/portfolio.html
+++ b/portfolio.html
@@ -103,7 +103,7 @@
                         <img src="images/portfolio/item-2.png" alt="portfolio-image" class="img-fluid rounded w-100 d-block">
                         <div class="hover-overlay">
                             <div class="hover-content">
-                                <a class="btn btn-light btn-sm" href="https://coffee-space.netlify.app/" target="_blank">CoffeeSpace Web</a>
+                                <a class="btn btn-light btn-sm" href="https://coffee-space.netlify.app/" target="_blank">CoffeeSpace</a>
                             </div>
                         </div>
                     </div>
@@ -114,7 +114,7 @@
                         <img src="images/portfolio/item-3.png" alt="portfolio-image" class="img-fluid rounded w-100 d-block">
                         <div class="hover-overlay">
                             <div class="hover-content">
-                                <a class="btn btn-light btn-sm" href="https://thousandideastmot.web.app/" target="_blank">TMOT Thousand Ideas</a>
+                                <a class="btn btn-light btn-sm" href="https://thousandideastmot.web.app/" target="_blank">TMOT</a>
                             </div>
                         </div>
                     </div>
@@ -125,7 +125,7 @@
                         <img src="images/portfolio/item-6.png" alt="portfolio-image" class="img-fluid rounded w-100 d-block">
                         <div class="hover-overlay">
                             <div class="hover-content">
-                                <a class="btn btn-light btn-sm" href="https://www.figma.com/file/9fdERNg3Md9tvAexCSlCCZ/Wireframe_MATRestaurant?node-id=0%3A1" target="_blank">Wireframe Restaurant</a>
+                                <a class="btn btn-light btn-sm" href="https://www.figma.com/file/9fdERNg3Md9tvAexCSlCCZ/Wireframe_MATRestaurant?node-id=0%3A1" target="_blank">Wireframe</a>
                             </div>
                         </div>
                     </div>
@@ -136,7 +136,7 @@
                         <img src="images/portfolio/item-8.png" alt="portfolio-image" class="img-fluid rounded w-100 d-block">
                         <div class="hover-overlay">
                             <div class="hover-content">
-                                <a class="btn btn-light btn-sm" href="https://github.com/hangocmy/cypress-pom/actions/runs/3066687593" target="_blank">CI/CD Voucher web with Heroku</a>
+                                <a class="btn btn-light btn-sm" href="https://github.com/hangocmy/cypress-pom/actions/runs/3066687593" target="_blank">Heroku</a>
                             </div>
                         </div>
                     </div>
@@ -147,7 +147,7 @@
                         <img src="images/portfolio/item-5.png" alt="portfolio-image" class="img-fluid rounded w-100 d-block">
                         <div class="hover-overlay">
                             <div class="hover-content">
-                                <a class="btn btn-light btn-sm" href="https://github.com/hangocmy/portfolio/actions/runs/4848573457" target="_blank">CI/CD Portfolio with GitHub Action</a>
+                                <a class="btn btn-light btn-sm" href="https://github.com/hangocmy/portfolio/actions/runs/4848573457" target="_blank">GitHub Action</a>
                             </div>
                         </div>
                     </div>
@@ -169,7 +169,7 @@
                         <img src="images/portfolio/item-1.png" alt="portfolio-image" class="img-fluid rounded w-100 d-block">
                         <div class="hover-overlay">
                             <div class="hover-content">
-                                <a class="btn btn-light btn-sm" href="https://www.figma.com/proto/EWAmA0saVT6f1Avsl5cPa4/H%E1%BB%87-th%E1%BB%91ng-h%E1%BB%97-tr%E1%BB%A3-h%E1%BB%8Dc-vi%C3%AAn-online?page-id=0%3A1&node-id=11%3A1730&viewport=326%2C167%2C0.08043020963668823&scaling=min-zoom" target="_blank">OnlineClass Prototype</a>
+                                <a class="btn btn-light btn-sm" href="https://www.figma.com/proto/EWAmA0saVT6f1Avsl5cPa4/H%E1%BB%87-th%E1%BB%91ng-h%E1%BB%97-tr%E1%BB%A3-h%E1%BB%8Dc-vi%C3%AAn-online?page-id=0%3A1&node-id=11%3A1730&viewport=326%2C167%2C0.08043020963668823&scaling=min-zoom" target="_blank">Prototype</a>
                             </div>
                         </div>
                     </div>
@@ -180,7 +180,7 @@
                         <img src="images/portfolio/item-7.png" alt="portfolio-image" class="img-fluid rounded w-100 d-block">
                         <div class="hover-overlay">
                             <div class="hover-content">
-                                <a class="btn btn-light btn-sm" href="https://github.com/hangocmy/cypress-pom" target="_blank">Cypress with POM</a>
+                                <a class="btn btn-light btn-sm" href="https://github.com/hangocmy/cypress-pom" target="_blank">Cypress</a>
                             </div>
                         </div>
                     </div>
@@ -204,7 +204,7 @@
                         <img src="images/portfolio/item-3.png" alt="portfolio-image" class="img-fluid rounded w-100 d-block">
                         <div class="hover-overlay">
                             <div class="hover-content">
-                                <a class="btn btn-light btn-sm" href="https://github.com/hangocmy/playwright-pom" target="_blank">Playwright with POM</a>
+                                <a class="btn btn-light btn-sm" href="https://github.com/hangocmy/playwright-pom" target="_blank">Playwright</a>
                             </div>
                         </div>
                     </div>
