--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         <div class="wave" data-progress="80%"></div>
                     </div>
                     <div class="card-footer bg-white">
-                        <h5 class="card-title">Automated Testing</h5>
+                        <h5 class="card-title">Performance Testing</h5>
                     </div>
                     </div>
                 </div>
@@ -147,7 +147,7 @@
                         <div class="wave" data-progress="100%"></div>
                     </div>
                     <div class="card-footer bg-white">
-                        <h5 class="card-title">Manual Testing</h5>
+                        <h5 class="card-title">Automated Testing</h5>
                     </div>
                     </div>
                 </div>
@@ -157,7 +157,7 @@
                         <div class="wave" data-progress="75%"></div>
                     </div>
                     <div class="card-footer bg-white">
-                        <h5 class="card-title">Web Front-end</h5>
+                        <h5 class="card-title">Manual Testing</h5>
                     </div>
                     </div>
                 </div>
@@ -397,9 +397,7 @@
                         <div class="col-sm-4">
                             <h5 class="text-white">Socials</h5>
                             <p class="text-white paragraph-sm font-secondary">
-                                <a class="text-white" target="_blank" href="https://www.facebook.com/ymcognah/"><i class="ti-facebook" style="font-size: 1.2rem; margin-right: 4px; border: 1px solid rgba(233, 232, 232, 0.7);border-radius: 3.8px;"></i></a>
                                 <a class="text-white" target="_blank" href="https://www.linkedin.com/in/hangocmy"><i class="ti-linkedin" style="font-size: 1.2rem; margin-right: 4px; border: 1px solid rgba(233, 232, 232, 0.7); border-radius: 3.8px;"></i></a>
-                                <br>
                                 <a class="text-white" target="_blank" href="https://www.instagram.com/ymcognah"><i class="ti-instagram" style="font-size: 1.2rem; margin-right: 4px;  border: 1px solid rgba(233, 232, 232, 0.7); border-radius: 3.8px;"></i></a>
                                 <a class="text-white" target="_blank" href="https://www.github.com/hangocmy"><i class="ti-github" style="font-size: 1.2rem; margin-right: 4px; border: 1px solid rgba(233, 232, 232, 0.7); border-radius: 3.8px;"></i></a></li>
                             </p>
