--- a/blog-single.html
+++ b/blog-single.html
@@ -222,25 +222,33 @@
                         <div class="col-sm-4">
                             <h5 class="text-white">Socials</h5>
                             <p class="text-white paragraph-sm font-secondary">
-                                <a class="text-white" target="_blank" href="https://www.facebook.com/ymcognah/"><i class="ti-facebook" style="font-size: 1.2rem; margin-right: 4px; border: 1px solid rgba(233, 232, 232, 0.7);border-radius: 3.8px;"></i></a>
-                                <a class="text-white" target="_blank" href="https://www.linkedin.com/in/hangocmy"><i class="ti-linkedin" style="font-size: 1.2rem; margin-right: 4px; border: 1px solid rgba(233, 232, 232, 0.7); border-radius: 3.8px;"></i></a>
-                                <br>
-                                <a class="text-white" target="_blank" href="https://www.instagram.com/ymcognah"><i class="ti-instagram" style="font-size: 1.2rem; margin-right: 4px;  border: 1px solid rgba(233, 232, 232, 0.7); border-radius: 3.8px;"></i></a>
-                                <a class="text-white" target="_blank" href="https://www.github.com/hangocmy"><i class="ti-github" style="font-size: 1.2rem; margin-right: 4px; border: 1px solid rgba(233, 232, 232, 0.7); border-radius: 3.8px;"></i></a></li>
+                                <a class="text-white" target="_blank" href="https://www.linkedin.com/in/hangocmy"><i
+                                        class="ti-linkedin"
+                                        style="font-size: 1.2rem; margin-right: 4px; border: 1px solid rgba(233, 232, 232, 0.7); border-radius: 3.8px;"></i></a>
+                                <a class="text-white" target="_blank" href="https://www.github.com/hangocmy"><i
+                                        class="ti-github"
+                                        style="font-size: 1.2rem; margin-right: 4px; border: 1px solid rgba(233, 232, 232, 0.7); border-radius: 3.8px;"></i></a>
+                                </li>
+                                <a class="text-white" target="_blank" href="https://www.instagram.com/ymcognah"><i
+                                        class="ti-instagram"
+                                        style="font-size: 1.2rem; margin-right: 4px;  border: 1px solid rgba(233, 232, 232, 0.7); border-radius: 3.8px;"></i></a>
                             </p>
                         </div>
                         <div class="col-sm-4">
                             <h5 class="text-white">Email and Phone</h5>
                             <p class="text-white paragraph-sm font-secondary">
-                                <a class="text-white" target="_blank" href="mailto:hangocmy00@gmail.com">hangocmy00@gmail.com</a>
+                                <a class="text-white" target="_blank"
+                                    href="mailto:hangocmy00@gmail.com">hangocmy00@gmail.com</a>
                                 <br>
-                                <a class="text-white" target="_blank" href="tel:+84888745255">+84 888 745 255</a> 
+                                <a class="text-white" target="_blank" href="tel:+84888745255">+84 888 745 255</a>
                             </p>
                         </div>
                         <div class="col-sm-4">
                             <h5 class="text-white">Address</h5>
                             <p class="text-white paragraph-sm font-secondary">
-                                <a class="text-white" target="_blank" href="https://www.google.com/maps/place/Tr%C6%B0%E1%BB%9Dng+%C4%90%E1%BA%A1i+h%E1%BB%8Dc+T%C3%B4n+%C4%90%E1%BB%A9c+Th%E1%BA%AFng/@10.7326029,106.6972803,17z/data=!3m1!4b1!4m5!3m4!1s0x317528b2747a81a3:0x33c1813055acb613!8m2!3d10.7326029!4d106.699469?hl=vi-VN">District 7, Ho Chi Minh City, Vietnam</a>
+                                <a class="text-white" target="_blank"
+                                    href="https://www.google.com/maps/place/Tr%C6%B0%E1%BB%9Dng+%C4%90%E1%BA%A1i+h%E1%BB%8Dc+T%C3%B4n+%C4%90%E1%BB%A9c+Th%E1%BA%AFng/@10.7326029,106.6972803,17z/data=!3m1!4b1!4m5!3m4!1s0x317528b2747a81a3:0x33c1813055acb613!8m2!3d10.7326029!4d106.699469?hl=vi-VN">District
+                                    7, Ho Chi Minh City, Vietnam</a>
                             </p>
                         </div>
                     </div>
@@ -248,7 +256,8 @@
             </div>
         
             <div class="border-top text-center border-dark py-3">
-                <p class="mb-0 text-light" style="font-size:12px">Copyright © 2020 | <a href="https://github.com/hangocmy" target="_blank">hangocmy</a></p>
+                <p class="mb-0 text-light" style="font-size:12px">Copyright © 2020 | <a href="https://github.com/hangocmy"
+                        target="_blank">hangocmy</a></p>
             </div>
         </footer>
         
